{{$NEXT}}

0.11      2011-07-07 21:36:14 America/Denver
          [Enchantments]
          - Collections: 
            - delete
            - navigation: next, previous, index
            - merge, epub

0.10      2011-05-02 21:27:52 America/Boise
          [Enchantments]
          - Collections: creatable, selectable and sortable
          - arbitrary diff potential
          - Publish to MojoMojo feature
          - MojoMojo table of contents support
          - MojoMojo syntax highlight support (class=prettyprint)
          
          [Refinements]
          - the css of both syntax highlighters: prettyprint and SHJS, has been refined
          - user name and email added to git commits
          
          [Remedies]
          - preserve title during auto-save

0.09      2011-03-24 22:46:23 America/Denver
          [Remedies]
          - Implicit sections properly added
          
          [Enchantments]
          - git is in the house (git backend for revisions and simple search via git grep)
            ${base_url}search/$search_word is the URI
          - Multiple wiki language support (textile, markdown, creole)

          [View]
          - A little style added for forms (via jQuery UI)
          - recent area style refined

0.08      2011-03-13 13:56:08 America/Denver
          [Tests]
          - @TestingMania passes now except Kwalitee. use strict fails
            but we have something better in place already - strictures.
	  - Added Mojito::Middleware::TestDB to set the database as mojito_test
            when testing with RELEASE_TESTING set to true. 
          - Added more tests to t/app.t usng the mojito_test db. create, read, update, delete

          [Remedies]
          - Fix conf finding logic so mojito_local.conf is not required.
          - Check for no recent docs before attempting to display recent docs list.

          [Refactor]
          - Template.pm attributes and builders added and moved into roles.