@@ -1,7 +1,7 @@
 use strictures 1;
 package Mojito::Filter::Shortcuts;
 use Moo::Role;
-use Mojito::Types;
+use MooX::Types::MooseLike qw(:all);
 use 5.010;
 use Data::Dumper::Concise;
 
@@ -9,7 +9,7 @@ with('Mojito::Role::Config');
 
 has shortcuts => (
     is => 'ro',
-    isa => Mojito::Types::ArrayRef,
+    isa => ArrayRef,
     lazy => 1,
     builder => '_build_shortcuts',
 );
